[UPDATE] documentation module: Added images to module description.

--- a/addons/music_manager/static/description/index.html
+++ b/addons/music_manager/static/description/index.html
@@ -9,7 +9,7 @@
         <div class="oe_span6">
             <div class="oe_demo oe_picture oe_screenshot">
                 <a href="#">
-                    <img src="test-img-info.png">
+                    <img src="img-info-upload.png">
                 </a>
                 <div class="oe_demo_footer oe_centeralign">¡Sube tu música en segundos!</div>
             </div>
@@ -55,7 +55,7 @@
         </div>
         <div class="oe_span6">
             <div class="oe_row_img oe_centered">
-                <img class="oe_picture oe_screenshot" src="test-img-info.png">
+                <img class="oe_picture oe_screenshot" src="img-info-navidrome.png">
             </div>
         </div>
     </div>
@@ -67,7 +67,7 @@
         <h3 class="oe_slogan">Edita y organiza sin complicaciones</h3>
         <div class="oe_span6">
             <div class="oe_row_img oe_centered">
-                <img class="oe_picture oe_screenshot" src="test-img-info.png">
+                <img class="oe_picture oe_screenshot" src="img-info-edit.png">
             </div>
         </div>
         <div class="oe_span6">
@@ -95,10 +95,10 @@
             descubrir nueva música y mantener tu colección siempre al día.
         </p>
         <div class="oe_row_img oe_centered oe_mt32">
-            <img class="oe_picture oe_screenshot" src="test-img-use.png">
-            <img class="oe_picture oe_screenshot" src="test-img-use.png">
-            <img class="oe_picture oe_screenshot" src="test-img-use.png">
-            <img class="oe_picture oe_screenshot" src="test-img-use.png">
+            <img class="oe_picture oe_screenshot" src="img-use-artist.png">
+            <img class="oe_picture oe_screenshot" src="img-use-genre.png">
+            <img class="oe_picture oe_screenshot" src="img-use-album.png">
+            <img class="oe_picture oe_screenshot" src="img-use-track.png">
         </div>
     </div>
 </section>
@@ -114,21 +114,21 @@
         <div class="oe_span4 oe_centered">
             <h3>Biblioteca impecable</h3>
             <div class="oe_row_img oe_centered">
-                <img class="oe_picture" src="test-img-example.png">
+                <img class="oe_picture" src="img-example-library.png">
             </div>
             <p>Todo tu catálogo ordenado y siempre listo para reproducir.</p>
         </div>
         <div class="oe_span4 oe_centered">
             <h3>Fácil mantenimiento</h3>
                 <div class="oe_row_img">
-                    <img class="oe_picture" src="test-img-example.png">
+                    <img class="oe_picture" src="img-example-maintenance.png">
                 </div>
             <p>Agrega nuevas canciones en segundos y actualiza tus datos con un solo clic.</p>
         </div>
         <div class="oe_span4 oe_centered">
             <h3>Compatible en todos lados</h3>
             <div class="oe_row_img oe_centered">
-                <img class="oe_picture" src="test-img-example.png">
+                <img class="oe_picture" src="img-example-compatibility.png">
             </div>
             <p>Disfruta tu música en cualquier lugar gracias a Navidrome y la organización impecable.</p>
         </div>
@@ -149,7 +149,7 @@
                     carpetas!
                 </q>
                 <cite class="oe_cite oe_clearfix">
-                    <img class="oe_photo" src="boy.png" width="64px">
+                    <img class="oe_photo" src="img-man-profile.png" width="64px">
                     <span class="oe_author">Alejando Gómez</span>
                     <br>
                     <span class="oe_job">
@@ -165,7 +165,7 @@
                     dispositivo sin complicaciones.
                 </q>
                 <cite class="oe_cite oe_clearfix">
-                    <img class="oe_photo" src="girl.png" width="64px">
+                    <img class="oe_photo" src="img-woman-profile.png" width="64px">
                     <span class="oe_author">Marta Ruiz</span>
                     <br>
                     <span class="oe_job">
