--- a/addons/music_manager/static/description/index.html
+++ b/addons/music_manager/static/description/index.html
@@ -8,7 +8,7 @@
         </div>
         <div class="oe_span6">
             <div class="oe_demo oe_picture oe_screenshot">
-                <a href="#">
+                <a href="https://github.com/Ildiar25/NavidromeServer">
                     <img src="img-info-upload.png">
                 </a>
                 <div class="oe_demo_footer oe_centeralign">¡Sube tu música en segundos!</div>
